--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "ui-grid",
-  "version": "4.6.3",
+  "name": "@rentman/ui-grid",
+  "unscopedname": "ui-grid",
+  "version": "4.6.4",
   "description": "A data grid for Angular",
   "directories": {
     "test": "test"
@@ -15,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/angular-ui/ui-grid.git"
+    "url": "https://github.com/rentmanpublic/ui-grid.git"
   },
   "keywords": [
     "angular",
