Revert "Remove postinstall script"
This reverts commit b0e2f8b3a72e8d8d59612eaff30a4cd486acddbf.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "index.js",
   "scripts": {
+    "postinstall": "grunt shell:protractor-install",
     "init": "validate-commit-msg",
     "test": "grunt",
     "commit": "git-cz",
